--- a/src/components/compound/icon-card.css
+++ b/src/components/compound/icon-card.css
@@ -18,7 +18,12 @@
   max-width: 80px;
   height: 80px;
   color: white;
-  background: linear-gradient(90deg, #f39200 0%, #ef1073 40%, rgba(0, 0, 0, 0.28) 60%);
+  background: linear-gradient(
+    90deg,
+    #f39200 0%,
+    #ef1073 40%,
+    rgba(0, 0, 0, 0.28) 60%
+  );
   transition: all 0.8s ease;
   background-position: 0px;
   background-size: 200px;
