--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 
 @layer base {
   :root {
-    --background: hsl(0 0% 100%);
-    --foreground: hsl(224 71.4% 4.1%);
+    --background: hsl(0, 0%, 97%);
+    --foreground: hsl(222, 21%, 12%);
 
     --card: hsl(0 0% 100%);
     --card-foreground: hsl(224 71.4% 4.1%);
@@ -13,7 +13,7 @@
     --popover: hsl(0 0% 100%);
     --popover-foreground: hsl(224 71.4% 4.1%);
 
-    --primary: hsl(220.9 39.3% 11%);
+    --primary: hsl(10, 69%, 51%);
     --primary-foreground: hsl(210 20% 98%);
 
     --secondary: hsl(220 14.3% 95.9%);
