--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
     --muted: hsl(220 14.3% 95.9%);
     --muted-foreground: hsl(220 8.9% 46.1%);
 
-    --accent: hsl(220 14.3% 95.9%);
+    --accent: hsl(220 14.3% 90%);
     --accent-foreground: hsl(220.9 39.3% 11%);
 
     --destructive: hsl(0 84.2% 60.2%);
@@ -78,6 +78,7 @@
   }
 }
 
+/* settigns to fix nav arrows on main slider */
 .slider-main .-right-12 {
     right: 1rem !important;
 }
